Made some fixes so it looks a little better on mobile

--- a/css/Index.css
+++ b/css/Index.css
@@ -1,13 +1,14 @@
 #UpperFeatureIndex{
   height: 300px;
   width: 100%;
+
   display: flex;
 
 }
 #FrontPageLogo{
   width: 500px;
   margin: auto;
-
+  max-width: 70%;
 }
 #download-tab{
   background-color: #7cb342;
