--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,9 @@ html {
 }
 .UpperFeature{
   background-image: url("img/RustyPaletteBannerBackground.png");
-  background-size: 100%;
+
+  background-repeat: no-repeat;
+  background-size: cover;
   width: 100%;
   height: 150px;
 }
